Add Credit-Card and Password input test cases.

--- a/common/common.conf
+++ b/common/common.conf
@@ -51,6 +51,11 @@ location /certs/ {
   try_files $uri $uri/ =404;
 }
 
+location /input/ {
+   root {{ site.serving-path }}/common;
+   try_files $uri $uri/ =404;
+}
+
 location / {
   try_files $uri $uri/ =404;
 }
