--- a/domains-local-only/cert/ecc256.conf
+++ b/domains-local-only/cert/ecc256.conf
@@ -12,7 +12,7 @@ server {
   server_name ecc256.{{ site.domain }};
 
   include {{ site.serving-path }}/nginx-includes/subdomain-ecc256.conf;
-  include {{ site.serving-path }}/nginx-includes/tls-mozilla-intermediate.conf
+  include {{ site.serving-path }}/nginx-includes/tls-mozilla-intermediate.conf;
   include {{ site.serving-path }}/common/common.conf;
 
   root {{ site.serving-path }}/domains-local-only/cert/ecc256;
