--- a/nginx-includes/subdomain-ecc256.conf
+++ b/nginx-includes/subdomain-ecc256.conf
@@ -3,4 +3,4 @@
 
 ssl on;
 ssl_certificate {{ site.cert-path }}/subdomain-ecc256.pem;
-ssl_certificate_key /etc/keys/leaf-main.key;
+ssl_certificate_key /gen/keys/subdomain-ecc256.key;
