Make [dynamic-]login forms go to submissions pages to trigger password manager logic.

--- a/common/common.conf
+++ b/common/common.conf
@@ -52,8 +52,16 @@ location /certs/ {
 }
 
 location /input/ {
-   root {{ site.serving-path }}/common;
-   try_files $uri $uri/ =404;
+  root {{ site.serving-path }}/common;
+  try_files $uri $uri/ =404;
+
+  location /input/login/submit {
+    error_page 405 =200 $uri;
+  }
+
+  location /input/dynamic-login/submit {
+    error_page 405 =200 $uri;
+  }
 }
 
 location / {
