--- a/domains/input/http-login.conf
+++ b/domains/input/http-login.conf
@@ -7,6 +7,10 @@ server {
   include {{ site.serving-path }}/common/common.conf;
 
   root {{ site.serving-path }}/domains/input/http-login;
+
+  location /submit {
+    error_page 405 =200 $uri;
+  }
 }
 
 server {
