Updated ECC 256 to Wildcard

--- a/certs/src/conf/subdomain-ecc256.conf
+++ b/certs/src/conf/subdomain-ecc256.conf
@@ -10,11 +10,12 @@ countryName         = US
 stateOrProvinceName = California
 localityName        = San Francisco
 organizationName    = BadSSL
-commonName          = ecc256.__DOMAIN__
+commonName          = *.__DOMAIN__
 
 [ req_v3_usr ]
 basicConstraints = CA:FALSE
 subjectAltName = @alt_names
 
 [ alt_names ]
-DNS.1 = ecc256.__DOMAIN__
+DNS.1 = *.__DOMAIN__
+DNS.2 = __DOMAIN__
