--- a/certs/src/conf/subdomain-preloaded-expect-ct.conf
+++ b/certs/src/conf/subdomain-preloaded-expect-ct.conf
@@ -10,12 +10,11 @@ countryName         = US
 stateOrProvinceName = California
 localityName        = San Francisco
 organizationName    = BadSSL
-commonName          = *.__DOMAIN__
+commonName          = subdomain-preloaded-expect-ct.__DOMAIN__
 
 [ req_v3_usr ]
 basicConstraints = CA:FALSE
 subjectAltName = @alt_names
 
 [ alt_names ]
-DNS.1 = *.__DOMAIN__
-DNS.2 = __DOMAIN__
+DNS.1 = subdomain-preloaded-expect-ct.__DOMAIN__
