--- a/nginx-includes/subdomain-preloaded-expect-ct.conf
+++ b/nginx-includes/subdomain-preloaded-expect-ct.conf
@@ -2,7 +2,7 @@
 ---
 
 ssl on;
-ssl_certificate {{ site.cert-path }}/wildcard-main.pem;
+ssl_certificate {{ site.cert-path }}/subdomain-preloaded-expect-ct.pem;
 ssl_certificate_key /etc/keys/leaf-main.key;
 
 add_header Expect-CT preload;
