--- a/nginx-includes/wildcard-normal.conf
+++ b/nginx-includes/wildcard-normal.conf
@@ -1,6 +1,4 @@
 ---
 ---
 
-ssl on;
-ssl_certificate {{ site.cert-path }}/wildcard-main.pem;
-ssl_certificate_key /etc/keys/leaf-main.key;
+include {{ site.serving-path }}/nginx-includes/wildcard-rsa2048.conf;
