--- a/domains/cert/preloaded-expect-ct.conf
+++ b/domains/cert/preloaded-expect-ct.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name preloaded-expect-ct.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.preloaded-expect-ct.conf;
+  include {{ site.serving-path }}/nginx-includes/subdomain-preloaded-expect-ct.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
