Fix ECC subdomain root paths. Fixes #248.

--- a/domains/cert/ecc256.conf
+++ b/domains/cert/ecc256.conf
@@ -15,5 +15,5 @@ server {
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
-  root {{ site.serving-path }}/domains-local-only/cert/ecc256;
+  root {{ site.serving-path }}/domains/cert/ecc256;
 }
