Move sha384 and sha512 to public domains. Closes #274.

--- a/domains/cert/sha512.conf
+++ b/domains/cert/sha512.conf
@@ -2,18 +2,18 @@
 ---
 server {
   listen 80;
-  server_name sha384.{{ site.domain }};
+  server_name sha512.{{ site.domain }};
   
   return 301 https://$server_name$request_uri;
 }
 
 server {
   listen 443;
-  server_name sha384.{{ site.domain }};
+  server_name sha512.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard-sha384.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-sha512.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
-  root {{ site.serving-path }}/domains-local-only/cert/sha384;
+  root {{ site.serving-path }}/domains/cert/sha512;
 }
