Add common `test/basic-auth` path. Closes #281.

--- a/common/common.conf
+++ b/common/common.conf
@@ -16,7 +16,11 @@ location /test {
     if ($http_referer ~* (youtube.com|ytimg.com|m.facebook.com|google) ) {
         access_log off;
     }
+  }
 
+  location /test/basic-auth {
+    auth_basic           "HTTP Basic Auth. Username and password are `test`/`test`.";
+    auth_basic_user_file {{ site.serving-path }}/nginx-includes/basic-auth.htpasswd;
   }
 }
 
