--- a/common/common.conf
+++ b/common/common.conf
@@ -53,6 +53,7 @@ location /mixed/ {
 location /certs/ {
   root {{ site.serving-path }}/common;
   try_files $uri $uri/ =404;
+  autoindex on;
 }
 
 location /input/ {
