Refactor HTTP subdomains and add textarea. Closes #320.

--- a/domains/http/http-dynamic-login.conf
+++ b/domains/http/http-dynamic-login.conf
@@ -2,24 +2,20 @@
 ---
 server {
   listen 80;
-  server_name http.{{ site.domain }};
+  server_name http-dynamic-login.{{ site.domain }};
   
   include {{ site.serving-path }}/common/common.conf;
 
-  location = /resources/font.ttf {
-    add_header "Access-Control-Allow-Origin" "*";
-  }
+  root {{ site.serving-path }}/domains/http/http-dynamic-login;
 
-  location = /resources/form-submitted.html {
+  location /submit {
     error_page 405 =200 $uri;
   }
-  
-  root {{ site.serving-path }}/domains/misc/http;
 }
 
 server {
   listen 443;
-  server_name http.{{ site.domain }};
+  server_name http-dynamic-login.{{ site.domain }};
 
   include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
