--- a/domains/http/http-password.conf
+++ b/domains/http/http-password.conf
@@ -2,16 +2,16 @@
 ---
 server {
   listen 80;
-  server_name http-credit-card.{{ site.domain }};
+  server_name http-password.{{ site.domain }};
   
   include {{ site.serving-path }}/common/common.conf;
 
-  root {{ site.serving-path }}/domains/input/http-credit-card;
+  root {{ site.serving-path }}/domains/http/http-password;
 }
 
 server {
   listen 443;
-  server_name http-credit-card.{{ site.domain }};
+  server_name http-password.{{ site.domain }};
 
   include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
