--- a/domains/http/http-textarea.conf
+++ b/domains/http/http-textarea.conf
@@ -2,20 +2,16 @@
 ---
 server {
   listen 80;
-  server_name http-dynamic-login.{{ site.domain }};
+  server_name http-textarea.{{ site.domain }};
   
   include {{ site.serving-path }}/common/common.conf;
 
-  root {{ site.serving-path }}/domains/input/http-dynamic-login;
-
-  location /submit {
-    error_page 405 =200 $uri;
-  }
+  root {{ site.serving-path }}/domains/http/http-textarea;
 }
 
 server {
   listen 443;
-  server_name http-dynamic-login.{{ site.domain }};
+  server_name http-textarea.{{ site.domain }};
 
   include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
