--- a/certs/Makefile
+++ b/certs/Makefile
@@ -55,6 +55,14 @@ $(O)/gen/chain/client-ca-root.pem: $(O)/gen/crt/client-ca-root.crt
 	./tool chain $@ $(D) $^
 CHAINS_PROD += $(O)/gen/chain/client-ca-root.pem
 
+$(O)/gen/key/client-ca-untrusted-root.key:
+	./tool gen-key $@ $(D) 4096
+$(O)/gen/crt/client-ca-untrusted-root.crt: src/conf/client-ca-untrusted-root.conf $(O)/gen/key/client-ca-untrusted-root.key
+	./tool gen-ca $@ $(D) $^
+$(O)/gen/chain/client-ca-untrusted-root.pem: $(O)/gen/crt/client-ca-untrusted-root.crt
+	./tool chain $@ $(D) $^
+CHAINS_PROD += $(O)/gen/chain/client-ca-untrusted-root.pem
+
 $(O)/gen/key/client.key:
 	./tool gen-key $@ $(D) 2048
 $(O)/gen/csr/client.csr: src/conf/client.conf $(O)/gen/key/client.key
@@ -62,9 +70,9 @@ $(O)/gen/csr/client.csr: src/conf/client.conf $(O)/gen/key/client.key
 $(O)/gen/crt/client.crt: src/conf/client.conf $(O)/gen/csr/client.csr $(O)/gen/key/client-ca-root.key $(O)/gen/crt/client-ca-root.crt
 	./tool sign $@ $(D) $(SIGN_LEAF_DEFAULTS) $^
 $(O)/gen/crt/client.p12: $(O)/gen/crt/client.crt $(O)/gen/key/client.key
-	./tool pkcs12-p12 $@ $(D) $^
+	./tool gen-pkcs12-p12 $@ $(D) $^
 $(O)/gen/crt/client.pem: $(O)/gen/crt/client.p12
-	./tool pkcs12-pem $@ $(D) $^
+	./tool pkcs12-convert-p12-pem $@ $(D) $^
 CHAINS_PROD += $(O)/gen/crt/client.pem
 
 ################################
@@ -424,7 +432,6 @@ $(O)/gen/dhparam/dh-composite.pem: src/dhparam/dh-composite.pem
 	cp $^ $@
 $(O)/gen/dhparam/dh-small-subgroup.pem: src/dhparam/dh-small-subgroup.pem
 	cp $^ $@
-
 
 ################################
 .PHONY: chains-prod
